--- a/category-api/src/main/webapp/WEB-INF/web.xml
+++ b/category-api/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,8 @@
                 spring.practice.project.config.DbConfig
                 spring.practice.project.config.MvcConfig
                 spring.practice.project.config.UserConfig
+                spring.practice.project.config.BoardConfig
+                spring.practice.project.config.CategoryConfig
                 spring.practice.project.config.PropertyConfig
             </param-value>
         </init-param>
