--- a/category-api/src/main/webapp/WEB-INF/web.xml
+++ b/category-api/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,7 @@
             <param-value>
                 spring.practice.project.config.DbConfig
                 spring.practice.project.config.MvcConfig
+                spring.practice.project.config.GlobalConfig
                 spring.practice.project.config.UserConfig
                 spring.practice.project.config.BoardConfig
                 spring.practice.project.config.CategoryConfig
